# user-signup

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: config.py  main.py
app/common/database/postgres/: core.py  manage.py
app/common/database/redis/: core.py
app/common/exceptions/sms/: sms.py
app/common/exceptions/user/: get_user.py  login.py  logout.py  reset_password.py  signup.py  validate.py
app/common/models/: user.py
app/common/service/: user_service.py
app/repository/: user_repo.py
app/router/: user_api.py
app/router/v1/: sms_router.py  user_router.py
app/schemas/: sms.py  user.py
app/service/: sms_service.py  user_service.py
migrations/: env.py
migrations/versions/: 644771cf4694_add_unique_option_in_user_token.py  8e4cf950df3d_edit_phone_number_type_int_str.py  a2d31f5702e4_create_user_model.py  a43236b8674f_add_user_token_field.py
tests/: conftest.py  test_user_login.py  test_user_logout.py  test_user_reset_password.py  test_user_signup.py
tests/sms/: test_sms_send.py
tests/user/: test_user_get.py  test_user_login.py  test_user_logout.py  test_user_reset_password.py  test_user_signup.py  test_user_validate_phone.py
