[tool.poetry]
name = "user_manage"
version = "0.1.0"
description = ""
authors = ["Taeksu Kim <sut606@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
alembic = "^1.8.0"
redis = "^4.3.4"
psycopg2-binary = "^2.9.3"
pytest = "^7.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
